# rust-actix-sample-api

./: .gitignore  Cargo.toml  README.md
migrations/2019-09-19-041809_create_products/: up.sql
src/: app.rs  db_connection.rs  main.rs  routes.rs
src/config/: mod.rs  routes.rs
src/handlers/: home.rs  mod.rs  products.rs
src/models/: product.rs
