[package]
name = "mystore"
version = "0.1.0"
authors = ["tranquangvu <vutran.513@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0"
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.9.0"
