[package]
name = "mystore"
version = "0.1.0"
authors = ["tranquangvu <vutran.513@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.8"
actix-web = "1.0"
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.9.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
